# Manipulator_system

manipulator_description/: CMakeLists.txt  manipulator_hw_plugins.xml  package.xml
manipulator_description/hardware/include/manipulator_hw/: manipulator_system.hpp  serial_comm.hpp
manipulator_description/hardware/src/: manipulator_system.cpp  serial_comm.cpp
manipulator_hw/: CMakeLists.txt  manipulator_hw_plugins.xml  package.xml
manipulator_hw/src/: manipulator_system.cpp
manipulator_moveit_config/: package.xml
manipulator_moveit_config/config/: manipulator_assembly_to_URDF_v2.ros2_control.xacro  manipulator_assembly_to_URDF_v2.urdf.xacro  moveit.rviz
manipulator_moveit_config/launch/: bringup.launch.py
