<?xml version="1.0"?>
<package format="3">
  <name>manipulator_hw</name>
  <version>0.1.0</version>
  <description>ROS2 hardware interface for manipulator, communicating with STM32 via UART</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>builtin_interfaces</depend>
  <export>
    <hardware_interface plugin="${prefix}/manipulator_hw_plugins.xml"/>
  </export>
</package>